scripts/nullness/wpi/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8.txt
../original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8/src/Distribution.java:85: error: (dereference.of.nullable) $$ 1 $$ hands $$ ( 2906, 2911 ) $$ dereference of possibly-null reference hands
	    int partitionSize = Math.max(1, Math.round((float) hands.size() / numBuckets) - 1);
	                                                       ^
../original/url3ee04818e8_abliss_poker_tgz-pJ8-TestJ8/src/Distribution.java:114: error: (dereference.of.nullable) $$ 1 $$ detailedDistribution.get(h.playableHand().size()) $$ ( 4024, 4073 ) $$ dereference of possibly-null reference detailedDistribution.get(h.playableHand().size())
			detailedDistribution.get(h.playableHand().size()).add(h);
			                        ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
